Fixed login modal box that overlaps other header menus, changed the prev and next buttons, Added teacher resources pdf collection

--- a/web/src/main/webapp/skins/respurriki/css/app.css
+++ b/web/src/main/webapp/skins/respurriki/css/app.css
@@ -257,12 +257,10 @@ Content
 .alt-download-pdf{
     display: none;
 }
+
 #the-pagination{
     margin-bottom: 0px;
     margin-top: 7px;
-}
-#the-pagination li a.btn{
-    border-radius: 6px;
 }
 #wrapper-logo{
     background-color: #ff5e00;
@@ -292,7 +290,7 @@ Content
 #top-header{
     background-color: #29a3ce;
     border-bottom: 1px solid #fff;
-    z-index: 3700;
+    z-index: 970;
     position: relative;
 }
 #the-header .navbar #curriki-navbar-collapse-1{
@@ -355,15 +353,36 @@ h2#course-title{
 }
 
 #curriki-primary-menu{
-    z-index: 3500;
+    z-index: 900;
 }
 #menuview{
-    z-index: 4500;
+    z-index: 980;
 }
 #select-class ul{
     left: auto;
     right: 0;
 }
+
+.btn-custom-nav {
+    background-color: #29a3ce;
+    border-color: #fff;
+    color: #FFFFFF;
+}
+.btn-custom-nav:hover, .btn-custom-nav:focus{
+    color: #FFFFFF;
+    background-color: #48c0e7;
+}
+/*
+.btn-custom-nav {
+    background-color: #9ac976;
+    border-color: #fff;
+    color: #FFFFFF;
+}
+.btn-custom-nav:hover, .btn-custom-nav:focus{
+    color: #FFFFFF;
+    background-color: #bbd1a9;
+}
+*/
 /* responsive behaviour */
 @media(max-width:500px){
     h2#course-title{
